results/SVCOMP/conversational/log-exceptions18-2024_03_10_15_08_43.txt
class A extends RuntimeException {}

class B extends A {}

public class exception18 {
    //@ ensures (\result == true) ==> (\exists A e; e != null);
    private static void foo() {
        A a = new A();
        throw a;
    }

    //@ ensures (\result == true) ==> (\exists A e; e != null);
    public static void main(String[] args) {
        try {
            foo();
            assert false;
        } catch (B e) {
            assert false;
        } catch (A e) {
            // expected here
        }
    }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
/home/max/Documents/JMLGPT/tmp/exceptions18.java:6: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures (\result == true) ==> (\exists A e; e != null);
                  ^
/home/max/Documents/JMLGPT/tmp/exceptions18.java:12: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures (\result == true) ==> (\exists A e; e != null);
                  ^
3 errors

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
    //@ ensures (\exists A e; e != null);
    private static void foo() {
        A a = new A();
        throw a;
    }

    //@ ensures (\exists A e; e != null);
    public static void main(String[] args) {
        try {
            foo();
            assert false;
        } catch (B e) {
            assert false;
        } catch (A e) {
            // expected here
        }
    }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
    //@ ensures (\exists A e; e != null);
    private static void foo() {
        A a = new A();
        throw a;
    }

    //@ ensures (\exists A e; e != null);
    public static void main(String[] args) {
        try {
            foo();
            assert false;
        } catch (B e) {
            assert false;
        } catch (A e) {
            // expected here
        }
    }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
    //@ ensures (\exists A e; e != null);
    private static void foo() {
        A a = new A();
        throw a;
    }

    //@ ensures (\exists A e; e != null);
    public static void main(String[] args) {
        try {
            foo();
            assert false;
        } catch (B e) {
            assert false;
        } catch (A e) {
            // expected here
        }
    }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
    //@ ensures (\exists A e; e != null);
    private static void foo() {
        A a = new A();
        throw a;
    }

    //@ ensures (\exists A e; e != null);
    public static void main(String[] args) {
        try {
            foo();
            assert false;
        } catch (B e) {
            assert false;
        } catch (A e) {
            // expected here
        }
    }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
    //@ ensures (\exists A e; e != null);
    private static void foo() {
        A a = new A();
        throw a;
    }

    //@ ensures (\exists A e; e != null);
    public static void main(String[] args) {
        try {
            foo();
            assert false;
        } catch (B e) {
            assert false;
        } catch (A e) {
            // expected here
        }
    }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
    //@ ensures (\exists A e; e != null);
    private static void foo() {
        A a = new A();
        throw a;
    }

    //@ ensures (\exists A e; e != null);
    public static void main(String[] args) {
        try {
            foo();
            assert false;
        } catch (B e) {
            assert false;
        } catch (A e) {
            // expected here
        }
    }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
    //@ ensures (\exists A e; e != null);
    private static void foo() {
        A a = new A();
        throw a;
    }

    //@ ensures (\exists A e; e != null);
    public static void main(String[] args) {
        try {
            foo();
            assert false;
        } catch (B e) {
            assert false;
        } catch (A e) {
            // expected here
        }
    }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
    //@ ensures (\exists A e; e != null);
    private static void foo() {
        A a = new A();
        throw a;
    }

    //@ ensures (\exists A e; e != null);
    public static void main(String[] args) {
        try {
            foo();
            assert false;
        } catch (B e) {
            assert false;
        } catch (A e) {
            // expected here
        }
    }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

class A extends RuntimeException {}

class B extends A {}

public class exception18 {
    //@ ensures (\exists A e; e != null);
    private static void foo() {
        A a = new A();
        throw a;
    }

    //@ ensures (\exists A e; e != null);
    public static void main(String[] args) {
        try {
            foo();
            assert false;
        } catch (B e) {
            assert false;
        } catch (A e) {
            // expected here
        }
    }
}
/home/max/Documents/JMLGPT/tmp/exceptions18.java:5: error: class exception18 is public, should be declared in a file named exception18.java
public class exception18 {
       ^
1 error

